<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/app_name"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBonus"
        android:layout_width="290dp"
        android:layout_height="60dp"
        android:layout_marginTop="36dp"
        android:background="@android:color/background_dark"
        android:onClick="goToBonus"
        android:text="@string/bonus_option"
        android:textColor="@android:color/background_light"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnSetup"
        android:layout_width="290dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:background="@android:color/background_dark"
        android:onClick="goToSetup"
        android:text="@string/two_players"
        android:textColor="@android:color/background_light"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBonus" />

    <Button
        android:id="@+id/btnAbout"
        android:layout_width="290dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:background="@android:color/background_dark"
        android:onClick="goToAbout"
        android:text="@string/about"
        android:textColor="@android:color/background_light"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSetup" />

    <Button
        android:id="@+id/btnQuit"
        android:layout_width="290dp"
        android:layout_height="60dp"
        android:layout_marginTop="60dp"
        android:background="@android:color/background_dark"
        android:onClick="quit"
        android:text="@string/close"
        android:textColor="@android:color/background_light"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAbout" />
</androidx.constraintlayout.widget.ConstraintLayout>